# clonebox

./: .bumpversion.cfg  .clonebox.clean.yaml  .clonebox.env  .clonebox.test.yaml  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  TODO.md  clone-clonebox-diagnostic-20260206-111356.txt  clonebox.sh  clonebox.yaml  debug_qga.sh  fix-network.sh  fix_qga.py  goal.yaml  index.html  manual_qga_fix.sh  project.functions.toon  project.toon  pyproject.toml  setup.sh  stop-all.sh  verify_cloudinit.py
.github/workflows/: ci.yml
TODO/: 01-secrets-isolation.md  02-rollback-mechanism.md  03-snapshot-management.md  04-health-checks.md  05-resource-limits.md  06-dependency-injection.md  CLONEBOX_IMPLEMENTATION_SUMMARY.md  CLONEBOX_IMPROVEMENTS_ROADMAP.md  README.md  clonebox_architecture.mermaid  test.md
docs/: QUICK_REFERENCE.md
isolabox/: .dockerignore  .env.example  Dockerfile  Dockerfile.test  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  router.php
isolabox/config/: config.php
isolabox/includes/: footer.php  functions.php  header.php
isolabox/pages/: 404.php
isolabox/public/: .htaccess  index.php
isolabox/public/assets/css/: style.css
isolabox/public/assets/js/: main.js
isolabox/test-results/: junit.xml  report.json
isolabox/tests/: run_tests.php
scripts/: README.md  clonebox-completion.bash  clonebox-completion.zsh  clonebox-health-check.sh  clonebox-logs-enhanced.sh  clonebox-logs.sh  clonebox-monitor.default  clonebox-monitor.service  clonebox-monitor.sh  diagnose-vm.sh  fetch-logs-enhanced.py  fetch-logs.py  fix_interface_name.py  fix_network_config.py  fix_ssh_keys.py  fix_yaml_bootcmd.py  fix_yaml_quotes.py  set-vm-password.sh  test-user-vm.sh  vm_console_interact.py  vm_state_diagnostic.py  vm_state_diagnostic_models.py
scripts/deprecated/: advanced_vm_diagnostic.py  diagnose-vm-enhanced.sh  monitor-vm-clone.sh
src/clonebox/: __init__.py  __main__.py  audit.py  browser_profiles.py  cli.py  cli_original.py  cloner.py  cloner_original.py  cloner_utils.py  cloud_init.py  container.py  dashboard.py  detector.py  di.py  exporter.py  importer.py  logging.py  models.py  monitor.py  orchestrator.py  p2p.py  paths.py  post_install_repair.py  profiles.py  remote.py  resource_monitor.py  resources.py  rollback.py  secrets.py  ssh.py  validator.py  vm_xml.py
src/clonebox/backends/: libvirt_backend.py  libvirt_network.py  qemu_disk.py  subprocess_runner.py
src/clonebox/cli/: __init__.py  compose_commands.py  container_commands.py  import_export_commands.py  interactive.py  interactive_audit.py  interactive_compose.py  interactive_container.py  interactive_import_export.py  interactive_monitor.py  interactive_original.py  interactive_plugins.py  interactive_remote.py  interactive_settings.py  interactive_snapshots.py  interactive_ssh.py  interactive_vm.py  misc_commands.py  monitoring_commands.py  parsers.py  plugin_commands.py  policy_audit_commands.py  remote_commands.py  snapshot_commands.py  utils.py  vm_commands.py
src/clonebox/health/: __init__.py  manager.py  models.py  probes.py
src/clonebox/interfaces/: disk.py  hypervisor.py  network.py  process.py
src/clonebox/plugins/: __init__.py  base.py  manager.py
src/clonebox/policies/: __init__.py  engine.py  models.py  validators.py
src/clonebox/snapshots/: __init__.py  manager.py  models.py
src/clonebox/templates/profiles/: ml-dev.yaml  web-stack.yaml
src/clonebox/validation/: __init__.py  apps.py  core.py  disk.py  mounts.py  overall.py  packages.py  services.py  smoke.py  validator.py
tests/: __init__.py  conftest.py  test_audit.py  test_cli.py  test_cli_new_commands.py  test_cloner.py  test_cloner_comprehensive.py  test_cloner_simple.py  test_comprehensive_coverage.py  test_container.py  test_coverage_additional.py  test_coverage_boost.py  test_coverage_boost_final.py  test_dashboard_coverage.py  test_detector.py  test_detector_discovery.py  test_models.py  test_network.py  test_orchestrator.py  test_plugins.py  test_post_install_repair.py  test_profiles.py  test_remote.py  test_validator.py  test_validator_mocked.py
tests/e2e/: __init__.py  test_container_workflow.py  test_detect_repair_pipeline.py  test_full_workflow.py  test_p2p_workflow.py  test_v2_features.py
